# GoogleCloudPlatform-_-generative-ai

.github/workflows/notebook_linter/: requirements.txt
gemini/agents/genai-experience-concierge/langgraph-demo/backend/: Dockerfile  pyproject.toml
gemini/agents/genai-experience-concierge/langgraph-demo/frontend/: Dockerfile
gemini/agents/genai-experience-concierge/langgraph-demo/terraform/: databases.tf
gemini/autocal/: package-lock.json
gemini/autocal/frontend/: package-lock.json  package.json
gemini/autocal/image-processor-function/: requirements.txt
gemini/autocal/terraform/modules/1-org-policies/: backend.tf
gemini/autocal/terraform/modules/3-resources/: backend.tf
gemini/function-calling/function_calling_service/: requirements.txt
gemini/function-calling/sql-talk-app/: requirements.txt
gemini/mcp/adk_multiagent_mcp_app/: Dockerfile
gemini/multimodal-live-api/gradio-voice/: requirements.txt
gemini/multimodal-live-api/native-audio-websocket-demo-apps/customer-support-demo-app/: package-lock.json  package.json
gemini/multimodal-live-api/native-audio-websocket-demo-apps/gaming-assistant-demo-app/: package-lock.json  package.json
gemini/multimodal-live-api/native-audio-websocket-demo-apps/react-demo-app/: package-lock.json  package.json
gemini/multimodal-live-api/native-audio-websocket-demo-apps/realtime-advisor-demo-app/: package-lock.json  package.json
gemini/multimodal-live-api/project-livewire/server/: Dockerfile  requirements.txt
gemini/multimodal-live-api/websocket-demo-app/backend/: requirements.txt
gemini/sample-apps/accelerating_product_innovation/app/pages/: requirements.txt
gemini/sample-apps/accelerating_product_innovation/app/pages_utils/: requirements.txt
gemini/sample-apps/finance-advisor-spanner/: Dockerfile  requirements.txt
gemini/sample-apps/fixmycar/backend/: pom.xml
gemini/sample-apps/fixmycar/frontend/: Dockerfile
gemini/sample-apps/gemini-live-telephony-app/: Dockerfile  requirements.txt
gemini/sample-apps/gemini-mesop-cloudrun/: requirements.txt
gemini/sample-apps/gemini-quart-cloudrun/app/: Dockerfile  requirements.txt
gemini/sample-apps/gemini-streamlit-cloudrun/: Dockerfile
gemini/sample-apps/genwealth/api/: package-lock.json  package.json
gemini/sample-apps/genwealth/function-scripts/analyze-prospectus/: requirements.txt
gemini/sample-apps/genwealth/function-scripts/process-pdf/: requirements.txt
gemini/sample-apps/genwealth/function-scripts/update-search-index/: requirements.txt
gemini/sample-apps/genwealth/function-scripts/write-metadata/: requirements.txt
gemini/sample-apps/genwealth/ui/: package-lock.json  package.json
gemini/sample-apps/llamadeploy-on-cloud-run/: Dockerfile  requirements.txt
gemini/sample-apps/llamaindex-rag/: Dockerfile  pyproject.toml
gemini/sample-apps/llamaindex-rag/ui/: Dockerfile
gemini/sample-apps/photo-discovery/ag-web/app/: Dockerfile  requirements.txt
gemini/sample-apps/photo-discovery/app/: pubspec.yaml
gemini/sample-apps/quickbot/conversational-app-multi-playbook/backend/: requirements.txt
gemini/sample-apps/quickbot/conversational-app-multi-playbook/frontend/: package-lock.json  package.json
gemini/sample-apps/quickbot/conversational-app-multi-playbook/functions/create-intent/: requirements.txt
gemini/sample-apps/quickbot/conversational-app-single-playbook/backend/: Dockerfile  Dockerfile.local  requirements.txt
gemini/sample-apps/quickbot/conversational-app-single-playbook/frontend/: package-lock.json  package.json
gemini/sample-apps/quickbot/conversational-app-single-playbook/functions/create-intent/: requirements.txt
gemini/sample-apps/quickbot/document-search-using-agent-builder/backend/: Dockerfile  Dockerfile.local  requirements.txt
gemini/sample-apps/quickbot/document-search-using-agent-builder/frontend/: package-lock.json  package.json
gemini/sample-apps/quickbot/image-background-changer-using-imagen3/backend/: requirements.txt
gemini/sample-apps/quickbot/image-background-changer-using-imagen3/frontend/: package-lock.json  package.json
gemini/sample-apps/quickbot/linkedin-profile-image-generation-using-imagen3/backend/: Dockerfile  requirements.txt
gemini/sample-apps/quickbot/linkedin-profile-image-generation-using-imagen3/frontend/: package-lock.json  package.json
gemini/sample-apps/quickbot/multi-agent-travel-concierge-with-adk/backend/: Dockerfile.local  requirements.txt
gemini/sample-apps/quickbot/multi-agent-travel-concierge-with-adk/frontend/: package-lock.json  package.json
gemini/sample-apps/quickbot/text-to-image-using-imagen3/backend/: Dockerfile  requirements.txt
gemini/sample-apps/quickbot/text-to-image-using-imagen3/frontend/: package-lock.json  package.json
gemini/sample-apps/quickbot/website-search-using-agent-builder/backend/: Dockerfile  Dockerfile.local  requirements.txt
gemini/sample-apps/quickbot/website-search-using-agent-builder/frontend/: package-lock.json  package.json
gemini/sample-apps/swot-agent/: Dockerfile  requirements.txt
gemini/tuning/genai-mlops-tune-and-eval/: requirements.txt
gemini/use-cases/entity-extraction/: Dockerfile
genkit/generate-synthetic-database/cloud-functions/: package.json
genkit/postcard-generator/: package.json
genkit/postcard-generator/terraform/: backend.tf
search/cloud-function/python/: requirements.txt
search/web-app/: Dockerfile
vision/sample-apps/V-Start/: package-lock.json  package.json
vision/use-cases/hey_llm/: package-lock.json  package.json
