[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.poetry]
name = "llamaindex-rag"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache License, Version 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "6.0.3"
llama-index = "0.14.19"
aiohttp = "3.13.5"
aiosignal = "1.4.0"
altair = "5.5.0"
annotated-types = "0.7.0"
antlr4-python3-runtime = "4.13.2"
anyio = "4.13.0"
appdirs = "1.4.4"
asgiref = "3.11.1"
async-timeout = "5.0.1"
attrs = "24.3.0"
backoff = "2.2.1"
bcrypt = "4.3.0"
beautifulsoup4 = "4.14.3"
blinker = "1.9.0"
build = "1.4.2"
cachecontrol = "0.14.4"
cachetools = "5.5.2"
certifi = "2024.12.14"
cffi = "1.17.1"
charset-normalizer = "3.4.6"
chroma-hnswlib = "0.7.6"
chromadb = "0.6.3"
cleo = "2.1.0"
click = "8.3.1"
coloredlogs = "15.0.1"
contourpy = "1.3.3"
crashtest = "0.4.1"
cryptography = "44.0.3"
cycler = "0.12.1"
dataclasses-json = "0.6.7"
datasets = "2.21.0"
deprecated = "1.3.1"
dill = "0.4.1"
dirtyjson = "1.0.8"
distlib = "0.4.0"
distro = "1.9.0"
dnspython = "2.8.0"
docstring-parser = "0.17.0"
dulwich = "0.25.2"
email-validator = "2.3.0"
entrypoints = "0.4"
exceptiongroup = "1.3.1"
faker = "33.3.1"
fastapi = "0.135.2"
fastapi-cli = "0.0.24"
fastjsonschema = "2.21.2"
favicon = "0.7.0"
filelock = "3.25.2"
flatbuffers = "24.12.23"
fonttools = "4.62.1"
frozenlist = "1.8.0"
gitdb = "4.0.12"
gitpython = "3.1.46"
google-api-core = "2.30.1"
google-auth = "2.49.1"
google-cloud-aiplatform = "1.144.0"
google-cloud-bigquery = "3.41.0"
google-cloud-core = "2.5.1"
google-cloud-documentai = "2.35.0"
google-cloud-resource-manager = "1.17.0"
google-cloud-secret-manager = "2.27.0"
google-cloud-storage = "2.19.0"
google-crc32c = "1.8.0"
google-resumable-media = "2.8.2"
googleapis-common-protos = "1.73.1"
greenlet = "3.3.2"
grpc-google-iam-v1 = "0.14.4"
grpcio = "1.80.0"
grpcio-status = "1.80.0"
h11 = "0.16.0"
htbuilder = "0.9.0"
httpcore = "1.0.9"
httptools = "0.7.1"
httpx = "0.28.1"
huggingface-hub = "0.36.2"
humanfriendly = "10.0"
hydra-core = "1.3.2"
idna = "3.11"
importlib-metadata = "7.2.1"
importlib-resources = "6.5.2"
iniconfig = "2.3.0"
installer = "0.7.0"
jaraco-classes = "3.4.0"
jeepney = "0.9.0"
jinja2 = "3.1.6"
joblib = "1.5.3"
jsonpatch = "1.33"
jsonpointer = "3.1.1"
jsonschema = "4.26.0"
keyring = "24.3.1"
kiwisolver = "1.5.0"
kubernetes = "31.0.0"
langchain = "0.3.28"
langchain-community = "0.4.1"
langchain-core = "0.3.83"
langchain-google-vertexai = "1.0.10"
langchain-openai = "0.3.35"
langchain-text-splitters = "0.3.11"
langsmith = "0.7.23"
llama-cloud = "0.1.46"
llama-index-agent-openai = "0.4.12"
llama-index-cli = "0.5.6"
llama-index-core = "0.14.19"
llama-index-embeddings-openai = "0.6.0"
llama-index-embeddings-vertex = "0.5.0"
llama-index-indices-managed-llama-cloud = "0.11.1"
llama-index-legacy = "0.9.48.post4"
llama-index-llms-openai = "0.7.5"
llama-index-llms-vertex = "0.7.0"
llama-index-multi-modal-llms-openai = "0.6.2"
llama-index-program-openai = "0.3.2"
llama-index-question-gen-openai = "0.3.1"
llama-index-readers-file = "0.6.0"
llama-index-readers-llama-parse = "0.6.1"
llama-index-vector-stores-chroma = "0.5.5"
llama-index-vector-stores-vertexaivectorsearch = "0.4.0"
llama-parse = "0.6.94"
lxml = "5.4.0"
markdown = "3.10.2"
markdown-it-py = "3.0.0"
markdownify = "0.14.1"
markdownlit = "0.0.7"
marko = "2.2.2"
markupsafe = "2.1.5"
marshmallow = "3.26.2"
matplotlib = "3.10.8"
mdurl = "0.1.2"
mmh3 = "4.1.0"
monotonic = "1.6"
more-itertools = "10.8.0"
mpmath = "1.4.1"
msgpack = "1.1.2"
multidict = "6.7.1"
multiprocess = "0.70.19"
mypy-extensions = "1.1.0"
nest-asyncio = "1.6.0"
networkx = "3.6.1"
nltk = "3.9.4"
numpy = "1.26.4"
oauthlib = "3.3.1"
omegaconf = "2.3.0"
onnxruntime = "1.24.4"
openai = "1.109.1"
opentelemetry-api = "1.40.0"
opentelemetry-exporter-otlp-proto-common = "1.40.0"
opentelemetry-exporter-otlp-proto-grpc = "1.40.0"
opentelemetry-instrumentation = "0.46b0"
opentelemetry-instrumentation-asgi = "0.46b0"
opentelemetry-instrumentation-fastapi = "0.46b0"
opentelemetry-proto = "1.40.0"
opentelemetry-sdk = "1.40.0"
opentelemetry-semantic-conventions = "0.46b0"
opentelemetry-util-http = "0.46b0"
orjson = "3.11.8"
overrides = "7.7.0"
packaging = "24.2"
pandas = "2.3.3"
pdfminer-six = "20240706"
pexpect = "4.9.0"
pillow = "10.4.0"
pkginfo = "1.12.1.2"
platformdirs = "4.9.4"
pluggy = "1.6.0"
poetry-core = "1.9.1"
poetry-plugin-export = "1.10.0"
posthog = "3.25.0"
prometheus-client = "0.24.1"
proto-plus = "1.27.2"
protobuf = "4.25.9"
ptyprocess = "0.7.0"
pyarrow = "18.1.0"
pyarrow-hotfix = "0.7"
pyasn1 = "0.6.3"
pyasn1-modules = "0.4.2"
pycparser = "2.23"
pydantic = "2.12.5"
pydantic-core = "2.45.0"
pydeck = "0.9.1"
pygments = "2.20.0"
pymdown-extensions = "10.21.2"
pyparsing = "3.3.2"
pypdf = "4.3.1"
pypika = "0.51.1"
pyproject-hooks = "1.2.0"
pysbd = "0.3.4"
pytest = "8.4.2"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.2.2"
python-multipart = "0.0.22"
pytz = "2024.2"
ragas = "0.4.3"
rapidfuzz = "3.14.3"
referencing = "0.37.0"
regex = "2024.11.6"
requests = "2.33.1"
requests-oauthlib = "2.0.0"
requests-toolbelt = "1.0.0"
rich = "13.9.4"
rpds-py = "0.30.0"
rsa = "4.9.1"
secretstorage = "3.5.0"
shapely = "2.1.2"
shellingham = "1.5.4"
six = "1.17.0"
smmap = "5.0.3"
sniffio = "1.3.1"
soupsieve = "2.8.3"
sqlalchemy = "2.0.48"
st-annotated-text = "4.0.2"
st-theme = "1.2.3"
starlette = "0.52.1"
streamlit = "1.56.0"
streamlit-camera-input-live = "0.2.0"
streamlit-card = "1.0.2"
streamlit-embedcode = "0.1.2"
streamlit-extras = "0.7.8"
streamlit-faker = "0.0.4"
streamlit-image-coordinates = "0.4.0"
streamlit-keyup = "0.3.0"
streamlit-toggle-switch = "1.0.2"
streamlit-vertical-slider = "2.5.5"
striprtf = "0.0.29"
sympy = "1.14.0"
tenacity = "8.5.0"
tiktoken = "0.12.0"
tokenizers = "0.22.2"
toml = "0.10.2"
tomli = "2.4.1"
tomlkit = "0.14.0"
toolz = "0.12.1"
tornado = "6.5.5"
tqdm = "4.67.3"
trove-classifiers = "2024.10.21.16"
typer = "0.24.1"
typing-inspect = "0.9.0"
typing-extensions = "4.15.0"
tzdata = "2024.2"
urllib3 = "2.6.3"
uvicorn = "0.42.0"
uvloop = "0.22.1"
validators = "0.35.0"
virtualenv = "20.39.1"
watchdog = "6.0.0"
watchfiles = "1.1.1"
websocket-client = "1.9.0"
websockets = "14.2"
wrapt = "1.17.3"
xxhash = "3.6.0"
yarl = "1.23.0"
zipp = "3.23.0"
llama-index-storage-docstore-firestore = "^0.5.0"
llama-index-storage-index-store-firestore = "^0.6.0"
llama-index-retrievers-vertexai-search = "^0.4.0"
llama-index-retrievers-bm25 = "^0.7.0"
google-cloud-logging = "^3.11.0"
anthropic = {extras = ["vertex"], version = "^0.87.0"}
weave = "^0.52.0"
black = "^24.8.0"
flake8 = "^7.1.1"
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
